ADD_SUBDIRECTORY (dbbuilder)
ADD_SUBDIRECTORY (editem)
ADD_SUBDIRECTORY (dbloadxml)
ADD_SUBDIRECTORY (getConfig)
ADD_SUBDIRECTORY (cplogger)
ADD_SUBDIRECTORY (clearShm)
ADD_SUBDIRECTORY (setConfig)
ADD_SUBDIRECTORY (viewtablelock)
ADD_SUBDIRECTORY (cleartablelock)
ADD_SUBDIRECTORY (ddlcleanup)
ADD_SUBDIRECTORY (idbmeminfo)
ADD_SUBDIRECTORY (rebuildEM)
ADD_SUBDIRECTORY (passwd)
ADD_SUBDIRECTORY (configMgt)
ADD_SUBDIRECTORY (parquetGen)
ADD_SUBDIRECTORY (parquetDDL)
