# add_subdirectory(boost_idb)
ADD_SUBDIRECTORY (startup)
ADD_SUBDIRECTORY (common)
ADD_SUBDIRECTORY (configcpp)
ADD_SUBDIRECTORY (loggingcpp)
ADD_SUBDIRECTORY (messageqcpp)
ADD_SUBDIRECTORY (threadpool)
ADD_SUBDIRECTORY (rwlock)
ADD_SUBDIRECTORY (dataconvert)
ADD_SUBDIRECTORY (joiner)
ADD_SUBDIRECTORY (rowgroup)
ADD_SUBDIRECTORY (cacheutils)
ADD_SUBDIRECTORY (funcexp)
ADD_SUBDIRECTORY (udfsdk)
ADD_SUBDIRECTORY (compress)
ADD_SUBDIRECTORY (batchloader)
ADD_SUBDIRECTORY (ddlcleanup)
ADD_SUBDIRECTORY (querystats)
ADD_SUBDIRECTORY (windowfunction)
ADD_SUBDIRECTORY (idbdatafile)
ADD_SUBDIRECTORY (querytele)
ADD_SUBDIRECTORY (libmysql_client)
ADD_SUBDIRECTORY (regr)
ADD_SUBDIRECTORY (cloudio)
ADD_SUBDIRECTORY (libmarias3)
ADD_SUBDIRECTORY (pron)
ADD_SUBDIRECTORY (fdb_wrapper_cpp)
